# capnproto

./: .bazelignore  .bazelrc  .cirrus.yml  .gitattributes  .gitignore  .nojekyll  .travis.yml  BUILD  CMakeLists.txt  CONTRIBUTORS  Dockerfile  LICENSE  README.md  RELEASE-PROCESS.md  WORKSPACE  appveyor-cygwin.sh  appveyor.yml  bootstrap-emscripten.sh  capnp-tool.html  cxx.html  cxxrpc.html  encoding.html  faq.html  flake.nix  index.html  install.html  javad.java  language.html  mega-test-kenton-home.cfg  mega-test-kenton-work.cfg  mega-test-quick.cfg  mega-test.cfg  mega-test.py  meson.build  meson.options  otherlang.html  params.json  push-site.sh  release.sh  roadmap.html  (+4 more)
c++/: .bazelignore  .bazelrc  .bazelversion  .clang-format  .clang-tidy  BUILD.bazel  CMakeLists.txt  LICENSE.txt  MODULE.bazel  Makefile.am  Makefile.ekam  README.txt  WORKSPACE  afl-fuzz.sh  capnp-json.pc.in  capnp-rpc.pc.in  capnp.pc.in  compile_flags.txt  configure.ac  ekam-build.sh  gtest-1.6.0-c++11.patch  kj-async.pc.in  kj.pc.in  meson.build  regenerate-bootstraps.sh  setup-autotools.sh  setup-cmake.sh  setup-ekam.sh  setup-gtest.sh  valgrind.supp
c++/cmake/: CapnProtoAddTest.cmake  CapnProtoConfig.cmake.in  CapnProtoConfigVersion.cmake.in  CapnProtoMacros.cmake  CapnProtoTargets.cmake  FindCapnProto.cmake  FindCapnp.cmake
c++/defs/: capnp.bzl  dependencies.bzl  repositories.bzl  workspace.bzl
c++/ekam-provider/: this-dir-is-to-trick-gdb.txt
c++/internal/: BUILD.bazel  cc_capnp_library.bzl
c++/lib/: BUILD.bazel
c++/m4/: acx_pthread.m4  ax_cxx_compile_stdcxx_11.m4  ax_cxx_compile_stdcxx_14.m4  ax_cxx_compile_stdcxx_20.m4  ax_cxx_compile_stdcxx_23.m4
c++/msvc/: capnproto.sln  capnproto.vcxproj  gen-test-code.bat  readme.txt
c++/pkgconfig/: capnp-rpc.pc.in  capnp-websocket.pc.in  capnp.pc.in  capnpc.pc.in  kj-async.pc.in  kj-gzip.pc.in  kj-http.pc.in  kj-test.pc.in  kj-tls.pc.in  kj.pc.in
c++/samples/: BUILD.bazel  CMakeLists.txt  addressbook.c++  addressbook.capnp  calculator-client.c++  calculator-server.c++  calculator.capnp  test-cmake.sh  test.sh
c++/samples/cmake/: C++11.cmake  Copyright.txt
c++/samples/tests/: addressbook1.sh.in  addressbook2.sh.in  calculator.sh.in
c++/samples/tutorial/: build_capnp  clean  client.c++  init  interface.capnp  meson.build  pch.h  proxy.c++  secure.c++  secure.h  service.c++
c++/src/: CMakeLists.txt  ekam-rules  meson.build
c++/src/benchmark/: capnproto-carsales.c++  capnproto-catrank.c++  capnproto-common.h  capnproto-eval.c++  carsales.proto  catrank.capnp  catrank.proto  common.h  eval.proto  null-carsales.c++  null-catrank.c++  null-common.h  null-eval.c++  protobuf-carsales.c++  protobuf-catrank.c++  protobuf-eval.c++  runner.c++
c++/src/capnp/: BUILD.bazel  CMakeLists.txt  afl-testcase.c++  any-test.c++  any.c++  any.h  arena.c++  arena.h  blob-test.c++  blob.c++  blob.h  bootstrap-test.ekam-rule  c++.capnp  c++.capnp.c++  c++.capnp.h  canonicalize-test.c++  capability-context.c++  capability-context.h  capability-test.c++  capability.c++  capability.h  capnp_gen.bzl  capnpc.ekam-rule  cc_capnp_library.bzl  common-test.c++  common.h  configure.bzl  dynamic-capability.c++  dynamic-test.c++  dynamic.c++  dynamic.h  encoding-test.c++  endian-fallback-test.c++  endian-reverse-test.c++  endian-test.c++  endian.h  ez-rpc-test.c++  ez-rpc.c++  ez-rpc.h  fuzz-convert.c++  (+87 more)
c++/src/capnp/benchmark/: capnproto-carsales.c++  capnproto-catrank.c++  capnproto-common.h  capnproto-eval.c++  carsales.capnp  carsales.proto  catrank.capnp  catrank.proto  common.h  eval.capnp  eval.proto  null-carsales.c++  null-catrank.c++  null-common.h  null-eval.c++  protobuf-catrank.c++  protobuf-common.h  protobuf-eval.c++  runner.c++
c++/src/capnp/compat/: BUILD.bazel  byte-stream-test.c++  byte-stream.c++  byte-stream.capnp  byte-stream.h  http-over-capnp-bench.c++  http-over-capnp-old-test.c++  http-over-capnp-perf-test.c++  http-over-capnp-test.c++  http-over-capnp.c++  http-over-capnp.capnp  http-over-capnp.h  json-rpc-test.c++  json-rpc.c++  json-rpc.capnp  json-rpc.h  json-test.c++  json-test.capnp  json.c++  json.capnp  json.capnp.c++  json.capnp.h  json.h  std-iterator.h  websocket-rpc-test.c++  websocket-rpc.c++  websocket-rpc.h
c++/src/capnp/compiler/: capnp-test.ekam-rule  capnp-test.sh  capnp.c++  capnp.ekam-manifest  md5.h  (+33 more)
c++/src/capnproto/: arena.c++  arena.h  blob-test.c++  blob.c++  blob.h  c++.capnp  capnpc.ekam-rule  common.h  descriptor-test.c++  descriptor.c++  descriptor.h  dynamic-test.c++  dynamic.c++  dynamic.h  encoding-test.c++  exception.c++  exception.h  generated-header-support.h  io.c++  io.h  layout-test.c++  layout.c++  layout.h  list.c++  list.h  logging-test.c++  logging.c++  logging.h  macros.c++  macros.h  message-internal.h  message-test.c++  message.c++  message.h  schema-loader-test.c++  schema-loader.c++  schema-loader.h  schema-test.c++  schema.c++  schema.capnp  (+29 more)
c++/src/kj/: BUILD.bazel  CMakeLists.txt  arena-test.c++  arena.c++  arena.h  array-test.c++  array.c++  array.h  async-bench.c++  async-cocoa.c++  async-cocoa.h  async-coroutine-alloc-test.c++  async-coroutine-alloc.h  async-coroutine-test.c++  async-environment-test.c++  async-inl.h  async-io-internal.h  async-io-nagle-test.c++  async-io-test.c++  async-io-unix.c++  async-io-win32.c++  async-io.c++  async-io.h  async-prelude.h  async-queue-test.c++  async-queue.h  async-test.c++  async-unix-poll-test.c++  async-unix-test.c++  async-unix-xthread-test.c++  async-unix.c++  async-unix.h  async-win32-test.c++  async-win32-xthread-test.c++  async-win32.c++  async-win32.h  async-xthread-test.c++  async.c++  async.h  benchmark.h  (+126 more)
c++/vagrant-win10/: README.md  Vagrantfile  choco.ps1  sshd.ps1  vs.ps1
compiler/: README.txt  capnproto-compiler.cabal
compiler/src/: Compiler.hs  CxxGenerator.hs  Grammar.hs  Lexer.hs  Main.hs  Parser.hs  Semantics.hs  Token.hs  Util.hs  WireFormat.hs  c++-header.mustache  c++-source.mustache
integration_tests/bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
integration_tests/bzlmod/src/: sample.c++  sample.capnp
(+224 files in other folders)
