# Platform for building with clang-cl using Bazel's toolchain resolution mechanism. For Linux/macOS
# enabling clang is easier, so no platform definitions are needed there.
platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:clang-cl",
    ],
)
