module(name = "capnp-cpp")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boringssl", version = "0.20260413.0", repo_name = "ssl")
bazel_dep(name = "brotli", version = "1.2.0.bcr.1")

# Not pulling in platforms via bzlmod causes issues with the Windows clang-cl toolchain
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "zlib", version = "1.3.2")

# Needed to make clang-cl toolchain available on Windows. Adapted from rules_cc.
cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc", "local_config_cc_toolchains")

register_toolchains(
    "@local_config_cc_toolchains//:all",
    dev_dependency = True,
)

bazel_dep(name = "google_benchmark", version = "1.9.5")
