module(
    name = "capnp-cpp",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "zlib", version = "1.3.2")
bazel_dep(name = "openssl", version = "3.5.5.bcr.4", repo_name = "ssl")
bazel_dep(name = "brotli", version = "1.2.0.bcr.1")
